--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="Style.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="keywords" content="" />
@@ -9,15 +10,21 @@
         <meta name="author" content="" />
 
         <title>Fundamentals of Computer Engineering</title>
-        <style>   
-        </style>
-
-
-
-        
     </head>
-    <body>
+   <body>
+<header class="container">
+<div class="header-content">
+<div class="header-title">Webpage Header</div>
+<nav>
+<a href="#" class="active">Home</a>
+<a href="#">About</a>
+<a href="#">Contact</a>
+</nav>
+</div>
+</header>
+<footer class="footer-section">
+<p>&copy; 2024 All Rights Reserved. Design by <a href="#">Moisés Martínez</a></p>
+</footer>
+</body>
 
-    </body>
-    
 </html>
