--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
 </nav>
 </div>
 </header>
+<main class="container">
+    <div class="content">
+        <h1>Welcome to the Webpage</h1>
+        <p>This is the central area of the webpage wher you can include your content.</p>
+    </div>
+    <div class="menu">
+        <div class="menu-content">
+            <div class="menu-item">
+                <img src="images\location-white.png"alt="Location Icon" class="menu-icon">
+                <p>Location</p>
+            </div>
+            <div class="menu-item">
+                <img src="images\telephone-white.png" alt="Phone Icon" class="menu">
+                <p>+02 1234567890</p>
+            </div>
+            <div class="menu-item">
+                <img src="images\envelope-white.png" alt="Email Icon" class="menu-icon">
+                <p>demo@gmail.com</p>
+            </div>
+        </div>
+    </div>
+</main>
 <footer class="footer-section">
 <p>&copy; 2024 All Rights Reserved. Design by <a href="#">Moisés Martínez</a></p>
 </footer>
