--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="./css/style.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="keywords" content="" />
@@ -30,15 +30,15 @@
     <div class="menu">
         <div class="menu-content">
             <div class="menu-item">
-                <img src="images\location-white.png"alt="Location Icon" class="menu-icon">
+                <img src="./images/location-white.png"alt="Location Icon" class="menu-icon">
                 <p>Location</p>
             </div>
             <div class="menu-item">
-                <img src="images\telephone-white.png" alt="Phone Icon" class="menu">
+                <img src="./images/telephone-white.png" alt="Phone Icon" class="menu">
                 <p>+02 1234567890</p>
             </div>
             <div class="menu-item">
-                <img src="images\envelope-white.png" alt="Email Icon" class="menu-icon">
+                <img src="./images/envelope-white.png" alt="Email Icon" class="menu-icon">
                 <p>demo@gmail.com</p>
             </div>
         </div>
